# hse-acs

./: .gitignore  CMakeLists.txt  README.md  data.h  enumerations.h  input.c  inrnd.c  main  main.c  main.cpp  main.py  makefile  output.c  run-tests.sh  sorting.asm  sorting.c  sorting.lst  task  task4  Описание архитектуры.docx
src/: constants.h  container.cpp  container.h  container.py  functional.cpp  functional.h  functional.py  generator.cpp  generator.h  language.cpp  language.h  language.py  object_oriented.cpp  object_oriented.h  object_oriented.py  procedural.cpp  procedural.h  procedural.py
test_results/: answer1.txt  answer10.txt  answer12.txt  answer13.txt  answer14.txt  answer15.txt  answer16.txt  answer17.txt  answer18.txt  answer20.txt  answer3.txt  answer5.txt  answer6.txt  answer8.txt  answerMaxElemsCount.txt  testResult1.txt  testResult10.txt  testResult11.txt  testResult12.txt  testResult13.txt  testResult14.txt  testResult15.txt  testResult16.txt  testResult17.txt  testResult18.txt  testResult19.txt  testResult2.txt  testResult20.txt  testResult3.txt  testResult4.txt  testResult5.txt  testResult6.txt  testResult7.txt  testResult8.txt  testResult9.txt  testResultEmptyInput.txt  testResultMaxElemsCount.txt
tests/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test3.txt  test4.txt  test5.txt  test7.txt  test8.txt  test9.txt  testMaxElemsCount.txt
